--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
 	Template: genesis
 */
 
-/* Stylesheet from Genesis 1.6.1 */
-
 /* Import Fonts
 ------------------------------------------------------------ */
 
@@ -81,7 +79,7 @@ body {
 
 a,
 a:visited {
-	color: #25a;
+	color: #810402;
 	text-decoration: none;
 }
 
@@ -813,7 +811,7 @@ h2 a:visited {
 }
 
 h2 a:hover {
-	color: #25a;
+	color: #810402;
 	text-decoration: none;
 }
 
@@ -838,7 +836,6 @@ h4 {
 	font-size: 16px;
 	line-height: 22px;
 	padding: 15px 25px 10px;
-	text-align: center;
 	text-transform: uppercase;
 	-moz-border-radius-topleft: 10px;
 	-moz-border-radius-topright: 10px;
@@ -1052,14 +1049,11 @@ p.wp-caption-text {
 .home-header #genesis-slider {
 	background: #efefef;
 	border: 1px solid #ddd;
-	margin: 0 10px 30px 10px;
+	margin: 0 0 30px;
 	padding: 20px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
-	-moz-box-shadow: 0 5px 10px #ccc;
-	-webkit-box-shadow: 0 5px 10px #ccc;
-	box-shadow: 0 5px 10px #ccc;
 }
 
 
@@ -1244,7 +1238,7 @@ div.gform_footer input.button:hover,
 .searchsubmit:hover,
 .red-button:hover,
 #submit:hover {
-	border: 1px solid #666;
+	background: #c61a0c url('images/red-button.jpg') repeat-x 0 -32px;
 	color: #fff;
 	text-decoration: none;
 }
@@ -1726,12 +1720,12 @@ body.driskill-dark #wrap {
 	color: #98b2cb;
 }
 
-.driskill-dark #genesis-slider {
+.driskill-dark .featured-image, 
+.driskill-dark .home-header #genesis-slider {
 	-moz-box-shadow: 0 0 0 #ccc;
 	-webkit-box-shadow: 0 0 0 #ccc;
 	box-shadow: 0 0 0 #ccc;
 }
-
 
 /* Responsive Design - Menu
 ------------------------------------------------------------ */
@@ -1904,8 +1898,7 @@ body.driskill-dark #wrap {
 	}
 	
 	.home-header #genesis-slider {
-		width: 94%;
-		padding: 10px 10px;
+		width: 95%;
 	}
 	
 	.home-header #genesis-slider .genesis-slider-wrap {
@@ -1925,7 +1918,7 @@ body.driskill-dark #wrap {
 	}
 	
 	.home-header #genesis-slider {
-		width: 98%;
+		width: 100%;
 		padding: 0;
 	}
 
