--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a img {
 	float: left;
 	overflow: hidden;
 	padding: 0;
-	width: 273px;
+	width: 270px;
 }
 
 #title {
@@ -158,11 +158,11 @@ a img {
 .header-image #title a {
 	display: block;
 	float: left;
-	height: 18px;
+	height: 120px;
 	overflow: hidden;
 	padding: 0;
 	text-indent: -9999px;
-	width: 273px;
+	width: 270px;
 }
 
 .header-image #description {
@@ -1727,7 +1727,7 @@ body.driskill-dark #wrap {
 	box-shadow: 0 0 0 #ccc;
 }
 
-/* Responsive Design - Menu
+/* Responsive Design - Menu and Logo
 ------------------------------------------------------------ */
 
 @media only screen and (min-width: 600px) and (max-width: 960px) {
@@ -1740,9 +1740,19 @@ body.driskill-dark #wrap {
 		width: 100%;
 	}
 	
-	#header .wrap {
+	/* This allows the header to be centered at lower resolutions */
+	.header-full-width #title-area {
+		width: 270px;
+	}
+	
+	/* This allows the header to be centered at lower resolutions */
+	.header-image #title-area {
+		float: none;
+	}
+	
+	.header-widget #header .wrap {
 		overflow: visible;
-		height: 110px;
+		height: 170px;
 	}
 	
 	#header .widget-area,
