--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 	Theme Name: Driskill
-	Description: Child theme of Genesis, by <a href="http://www.billerickson.net/get-genesis">StudioPress</a>.
+	Description: Responsive Design child theme for Genesis.
 	Author: Bill Erickson
 	Author URI: http://www.billerickson.net
 	
