--- a/style.css
+++ b/style.css
@@ -1631,14 +1631,7 @@ div.gform_wrapper .gform_footer {
 ------------------------------------------------------------ */
 
 body.driskill-dark {
-	background: #303030; /* Old browsers */
-	background: -moz-linear-gradient(top, #303030 0%, #000000 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#303030), color-stop(100%,#000000)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #303030 0%,#000000 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #303030 0%,#000000 100%); /* Opera11.10+ */
-	background: -ms-linear-gradient(top, #303030 0%,#000000 100%); /* IE10+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303030', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-	background: linear-gradient(top, #303030 0%,#000000 100%); /* W3C */
+	background: #303030; 
 }
 
 body.driskill-dark #wrap {
